[package]
name = "ezerdesk-sdk-macros"
version = "0.1.1"
edition = "2024"
description = "Procedural macros for the Ezerdesk SDK."
license = "Apache-2.0"
repository = "https://github.com/ezerdesk/ezerdesk-sdk-macros"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
